--- a/SayanJobeDone/Client/wwwroot/index.html
+++ b/SayanJobeDone/Client/wwwroot/index.html
@@ -9,16 +9,26 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="SayanJobeDone.Client.styles.css" rel="stylesheet" />
+
+    <script src="css/JavaScript.js"></script>
+    <script>
+        (g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })
+            ({ key: "AIzaSyBsFO0DhMlI4qzHwhoZknSkfM_8921Z2JU", v: "weekly" });</script>
+
+
 </head>
 
 <body>
     <div id="app">Loading...</div>
+
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+
+    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyBsFO0DhMlI4qzHwhoZknSkfM_8921Z2JU&libraries=drawing&libraries=places"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
