Client service responce #2

--- a/SayanJobeDone/Client/wwwroot/index.html
+++ b/SayanJobeDone/Client/wwwroot/index.html
@@ -9,6 +9,8 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="SayanJobeDone.Client.styles.css" rel="stylesheet" />
+    <!--I Add this-->
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.21.4/dist/bootstrap-table.min.css">
 
     <script src="css/JavaScript.js"></script>
     <script>
@@ -30,6 +32,8 @@
 
     <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyBsFO0DhMlI4qzHwhoZknSkfM_8921Z2JU&libraries=drawing&libraries=places"></script>
     <script src="_framework/blazor.webassembly.js"></script>
+    <!--I Add this-->
+    <script src="https://unpkg.com/bootstrap-table@1.21.4/dist/bootstrap-table.min.js"></script>
 </body>
 
 </html>
